--- a/index.css
+++ b/index.css
@@ -76,6 +76,7 @@ html {
     overflow-y: scroll;
     overflow-x: hidden;
     font-size: 1rem;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 @media (min-width: 576px) {
