--- a/index.css
+++ b/index.css
@@ -98,4 +98,5 @@ body{
     font-family: 'Bitter', serif; 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
 }
